--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,15 @@
     "text7":"What will you get as a result?",
     "text8":"This mini-exam shows the high level of your knowledge in the JavaScript language. You will recognize your characteristics and the boundaries of the parties, and understand where to move on.",
     "text9":"You can find out your level of English right now in online testing",
-    "text10":"START TEST"
+    "text10":"START TEST",
+    "text11":"Login",
+    "text12":"Register",
+    "text13":"Sign in",
+    "text14":"Email Address *",
+    "text15":"Password *",
+    "text16":"Remember me",
+    "text17":"Sign In",
+    "text18":"Forgot password?",
+    "text19":"Don't have an account? Sign Up",
+    "text20":"Copyright © 2023."
 }
