--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,15 @@
     "text7":"Что ты получишь в результате?",
     "text8":"Этот мини-экзамен показывает высокий уровень твоих знаний в языке JavaScript. Ты узнаешь свои особенности и границы сторон, и поймешь, куда двигаться дальше.",
     "text9":"Узнать свой уровень английского ты можешь прямо сейчас в онлайн-тестировании",
-    "text10":"НАЧАТЬ ТЕСТ"
+    "text10":"НАЧАТЬ ТЕСТ",
+    "text11":"Войти",
+    "text12":"Регистрация",
+    "text13":"Войти",
+    "text14":"Адрес электронной почты *",
+    "text15":"Пароль *",
+    "text16":"Запомнить меня",
+    "text17":"Войти",
+    "text18":"Забыли пароль?",
+    "text19":"У вас нет аккаунта? Зарегистрироваться",
+    "text20":"© 2023. Все права защищены."
 }
